Bug 789691 - Migrate BlobPropertyBag to WebIDL binding dictionary, r=bzbarsky